Get camping by id
